--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
             <section>
                 <div class="menu">
                     <div class="menu-list">
-                        <div class="matches">Matches</div>
+                        <div class="matches"><a id="match-page" href="match.html">Matches</a></div>
                         <div class="group">All Group</div>
                         <div class="blogs-link">Blog</div>
                     </div>
