--- a/html/match.html
+++ b/html/match.html
@@ -54,9 +54,9 @@
             <section>
                 <div class="menu">
                     <div class="menu-list">
-                        <div class="matches">Matches</div>
+                        <div id="highlight" class="matches">Matches</div>
                         <div class="group">All Group</div>
-                        <div class="blogs-link">Blog</div>
+                        <div id="highlight-off" class="blogs-link"><a class="none" href="index.html">Blog</a></div>
                     </div>
                 </div>
             </section>
