--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             </div>
             <div class="banner-img">
-                <img src="/media/images/Banner-Image.png" alt="">
+                <img src="/Banner-Image.png" alt="">
 
             </div>
         </div>
@@ -56,7 +56,7 @@
             <main class="blogs">
                 <div class="bolg">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -78,7 +78,7 @@
                 </div>
                 <div class="bolg">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -100,7 +100,7 @@
                 </div>
                 <div class="bolg">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="bolg">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -144,7 +144,7 @@
                 </div>
                 <div class="bolg">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -166,7 +166,7 @@
                 </div>
                 <div class="bolg">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -188,7 +188,7 @@
                 </div>
                 <div class="bolg hidden-blog">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -210,7 +210,7 @@
                 </div>
                 <div class="bolg hidden-blog">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
@@ -232,7 +232,7 @@
                 </div>
                 <div class="bolg hidden-blog">
                     <div class="blog-banner">
-                        <img src="/media/images/Blog Image.png" alt="">
+                        <img src="/Blog Image.png" alt="">
                     </div>
                     <span class="transfer">Transfer</span>
                     <div class="blog-details">
