--- a/match.html
+++ b/match.html
@@ -41,7 +41,7 @@
 
                 </div>
                 <div class="banner-img">
-                    <img src="/Banner-Image.png" alt="">
+                    <img src="./bimage.png" alt="">
 
                 </div>
             </div>
@@ -64,11 +64,11 @@
                 <div class="match-1">
                     <div class="match-schedule">
                         <div class="match-banner">
-                            <img src="/Flag.png" alt="">
+                            <img src="./france.png" alt="">
                         </div>
                         <h1>VS</h1>
                         <div class="match-banner">
-                            <img src="/germany Flag.png" alt="">
+                            <img src="./germany.png" alt="">
                         </div>
                     </div>
                     <div>
@@ -79,11 +79,11 @@
                 <div class="match-2">
                     <div class="match-schedule">
                         <div class="match-banner">
-                            <img src="/Flag.png" alt="">
+                            <img src="./france.png" alt="">
                         </div>
                         <h1>VS</h1>
                         <div class="match-banner">
-                            <img src="/germany Flag.png" alt="">
+                            <img src="./germany.png" alt="">
                         </div>
                     </div>
                     <div>
@@ -94,11 +94,11 @@
                 <div class="match-3">
                     <div class="match-schedule">
                         <div class="match-banner">
-                            <img src="/Flag.png" alt="">
+                            <img src="./france.png" alt="">
                         </div>
                         <h1>VS</h1>
                         <div class="match-banner">
-                            <img src="/germany Flag.png" alt="">
+                            <img src="./germany.png" alt="">
                         </div>
                     </div>
                     <div>
@@ -109,11 +109,11 @@
                 <div class="match-4">
                     <div class="match-schedule">
                         <div class="match-banner">
-                            <img src="/Flag.png" alt="">
+                            <img src="./france.png" alt="">
                         </div>
                         <h1>VS</h1>
                         <div class="match-banner">
-                            <img src="/germany Flag.png" alt="">
+                            <img src="./germany.png" alt="">
                         </div>
                     </div>
                     <div>
@@ -124,11 +124,11 @@
                 <div class="match-5">
                     <div class="match-schedule">
                         <div class="match-banner">
-                            <img src="/Flag.png" alt="">
+                            <img src="./france.png" alt="">
                         </div>
                         <h1>VS</h1>
                         <div class="match-banner">
-                            <img src="/germany Flag.png" alt="">
+                            <img src="./germany.png" alt="">
                         </div>
                     </div>
                     <div>
@@ -139,11 +139,11 @@
                 <div class="match-6">
                     <div class="match-schedule">
                         <div class="match-banner">
-                            <img src="/Flag.png" alt="">
+                            <img src="./france.png" alt="">
                         </div>
                         <h1>VS</h1>
                         <div class="match-banner">
-                            <img src="/germany Flag.png" alt="">
+                            <img src="./germany.png" alt="">
                         </div>
                     </div>
                     <div>
